--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-
 <html>
 
-	<head>
-		<title>2 Dots</title>
-	</head>
+<head>
+	<title>2 Dots</title>
+</head>
 
- 
+
 <body>
 	<h1>2 Dots</h1>
-	<p> </p>
-</body>
-
-<canvas id="canvas" width="1000" height="500" style="border:1px solid #c3c3c3;">
+	<canvas id="canvas" width="1000" height="500" style="border:1px solid #c3c3c3;">
 	<script>
 
 		var dot = new Image();
@@ -79,6 +75,10 @@
 		init();
 
 	</script>	
-</canvas>
+	</canvas>
+
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.22/p5.js"></script>
+	<script src="../sketch.js"></script>
+</body>
 
 </html>
